# expit

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst  v1.1.rst
src/expit/: __init__.py
src/expit/core/: __init__.py
src/expit/tests/: __init__.py  test_TestFunction.py  test_TestMainCommand.py
