[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.2,<9",
    "preparse>=1.1,<2",
]
description = "This project provides an implementation of the expit function."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "expit"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.1.2"

[project.urls]
Download = "https://pypi.org/project/expit/#files"
Index = "https://pypi.org/project/expit/"
Source = "https://github.com/johannes-programming/expit/"
Website = "https://expit.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = false
